--- a/package.json
+++ b/package.json
@@ -22,8 +22,5 @@
     "easing": "0.0.4",
     "lodash": "~2.2.0"
   },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-livescript": "~0.5.0"
-  }
+  "devDependencies": {}
 }
