--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "osc-min": "0.0.12",
     "spi": "0.1.0",
     "easing": "0.0.4",
-    "lodash": "~2.2.0"
+    "lodash": "~2.2.0",
+    "tic": "~0.2.1",
+    "express": "~3.4.0",
+    "husl": "~2.0.0"
   },
   "devDependencies": {}
 }
